@@ -25,9 +25,12 @@
 
 
 #include "forcefielddialog.h"
+#include "constraintsmodel.h"
+#include "constraintsdialog.h"
 
 #include <openbabel/mol.h>
 #include <openbabel/forcefield.h>
+#include <openbabel/dock.h>
 
 #include <avogadro/glwidget.h>
 #include <avogadro/extension.h>
@@ -73,8 +76,10 @@ namespace Avogadro {
 
     private:
       OpenBabel::OBForceField* m_forceField;
+      ConstraintsModel* m_constraints;
       QList<QAction *> m_actions;
       ForceFieldDialog *m_Dialog;
+      ConstraintsDialog *m_ConstraintsDialog;
   };
 
   class ForceFieldExtensionFactory : public QObject, public ExtensionFactory
@@ -92,8 +97,9 @@ namespace Avogadro {
 
     public:
     ForceFieldThread(Molecule *molecule, OpenBabel::OBForceField* forceField,
-        QTextEdit *textEdit, int forceFieldID, int nSteps, int algorithm,
-        int gradients, int convergence, int task, QObject *parent=0);
+        OpenBabel::OBFFConstraints* constraints, QTextEdit *textEdit, 
+	int forceFieldID, int nSteps, int algorithm, int gradients, 
+	int convergence, int task, QObject *parent=0);
 
       void run();
       int cycles() const;
@@ -106,6 +112,7 @@ namespace Avogadro {
 
     private:
       Molecule *m_molecule;
+      OpenBabel::OBFFConstraints* m_constraints;
       QTextEdit *m_textEdit;
       
       QMutex m_mutex;
@@ -120,6 +127,7 @@ namespace Avogadro {
 
       OpenBabel::OBForceField* m_forceField;
       ForceFieldDialog *m_Dialog;
+      ConstraintsDialog *m_ConstraintsDialog;
 
       bool m_stop;
   };
@@ -127,8 +135,9 @@ namespace Avogadro {
  class ForceFieldCommand : public QUndoCommand
  {
    public:
-     ForceFieldCommand(Molecule *molecule, OpenBabel::OBForceField *forcefield, QTextEdit *messages,
-         int forceFieldID, int nSteps, int algorithm, int gradients, int convergence, int task);
+     ForceFieldCommand(Molecule *molecule, OpenBabel::OBForceField *forcefield, 
+         OpenBabel::OBFFConstraints* constraints, QTextEdit *messages, int forceFieldID, 
+	 int nSteps, int algorithm, int gradients, int convergence, int task);
      
      ~ForceFieldCommand();
      
@@ -149,6 +158,7 @@ namespace Avogadro {
      int m_nSteps;
      int m_task;
      Molecule *m_molecule;
+     OpenBabel::OBFFConstraints* m_constraints;
      QTextEdit *m_textEdit;
      
      ForceFieldThread *m_thread;
